--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 ### IntelliJ IDEA ###
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+./src/main/**/out/
+./src/test/**/out/
+.idea
+.obsidian
 
 ### Eclipse ###
 .apt_generated
@@ -29,4 +31,4 @@ bin/
 .DS_Store
 
 ### else ###
-!**/Abstracts
+./Abstracts
